<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LayuotActivity">

    <ImageView
        android:id="@+id/image_view_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:adjustViewBounds="true"
        android:src="@drawable/back"
        app:layout_constraintBottom_toTopOf="@id/table_layout_contact"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:id="@+id/table_layout_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_view_contact">

        <TableRow android:layout_marginTop="4dp">

            <TextView
                android:id="@+id/text_view_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/contact_name"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/edit_text_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tony_stark"
                android:textSize="20sp" />
        </TableRow>

        <TableRow android:layout_marginTop="4dp">

            <TextView
                android:id="@+id/text_view_org"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="6dp"
                android:text="@string/contact_org"
                android:textSize="22sp" />

            <EditText
                android:id="@+id/edit_text_organisation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mirea"
                android:textSize="20sp" />
        </TableRow>

        <TableRow android:layout_marginTop="4dp">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="4dp">

                <ImageView
                    android:id="@+id/image_view_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentStart="true"
                    android:adjustViewBounds="true"
                    android:src="@drawable/phone" />

            </RelativeLayout>

            <EditText
                android:id="@+id/edit_text_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="-4dp"
                android:text="@string/number"
                android:textSize="20sp" />
        </TableRow>

        <TableRow>

            <TextView />

            <TextView
                android:id="@+id/text_view_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:hint="@string/mobile"
                android:textSize="12sp" />
        </TableRow>
    </TableLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/button_save_contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/save_contact" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>